--- a/Readme
+++ b/Readme
@@ -1,3 +1,4 @@
-включить docker-compose up
+чтобы запустить приложение не обходима зайти в /shop и прописать npm install после выйти в корневую папку /projectOnReact и прописать docker-compose up
+перейти по локальному порту http://localhost:3000/ 
 
-закрыть подключение docker-compose down
+
